force-app/main/default/objects/Patient_Document__c/Patient_Document__c.object-meta.xml
<CustomObject>
    <label>Patient Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>