force-app/main/default/objects/Patient_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical Records</fullName>
            </value>
            <value>
                <fullName>Insurance Card</fullName>
            </value>
            <value>
                <fullName>Laboratory Results</fullName>
            </value>
            <value>
                <fullName>Imaging Results</fullName>
            </value>
            <value>
                <fullName>Consent Forms</fullName>
            </value>
            <value>
                <fullName>Psychosocial Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>