force-app/main/default/objects/Patient_Document__c/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluation</label>
    <referenceTo>Evaluation__c</referenceTo>
    <relationshipLabel>Evaluation</relationshipLabel>
    <relationshipName>Patient_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>