force-app/main/default/objects/Patient_Document__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Transplant_Patient__c</referenceTo>
    <relationshipLabel>Patient</relationshipLabel>
    <relationshipName>Patient_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>